fix navigation alignment

--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -170,4 +170,8 @@ nav .index-nav a {
   li a {
     font-size: var(--fs-sm);
   }
+
+  .animated-nav {
+    margin-bottom: 0;
+  }
 }
